...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Name Input Field -->
    <EditText
        android:id="@+id/etFacilityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Name *"
        android:inputType="text"
        android:minHeight="48dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFacilityName" />

    <!-- Save Button -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="Save"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="190dp"
...
