...
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        app:layout_constraintTop_toBottomOf="@id/tvFacilityTitle"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddFacility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_plus"
        android:contentDescription="Add Event"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
...
