<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Horizontal Layout for ImageButton and TextView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/profile_header"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:text="List of Profiles"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/backArrowUsers"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow"
                android:background="?attr/selectableItemBackgroundBorderless"/>
        </LinearLayout>

        <!-- Scrollable List of Profiles -->
        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/scrollable_content"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:id="@+id/profile_list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <!-- Profiles will be added dynamically here -->
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
