...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_admin_label"
        app:layout_constraintVertical_bias="0.315">

        <!-- Buttons -->
        <Button
            android:id="@+id/btn_view_event"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:backgroundTint="#000000"
            android:fontFamily="sans-serif"
            android:text="View Event"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@android:color/black" />

        <Button
            android:id="@+id/btn_view_profiles"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:backgroundTint="#000000"
            android:fontFamily="sans-serif"
...
