...
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_arrow" />
    </LinearLayout>

    <!-- Event Title -->
    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="16dp" />
...
